<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:background="@drawable/square_box"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_40"
            android:layout_gravity="center"
            android:src="@drawable/ic_person_outline"/>

        <View
            android:layout_width="0.5dp"
            android:layout_height="@dimen/dp_50"
            android:background="@color/gray"/>

        <EditText
            android:id="@+id/edt_register_username"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_50"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/input_phone_number"
            android:paddingLeft="@dimen/dp_20"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:background="@drawable/square_box"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_40"
            android:layout_gravity="center"
            android:src="@drawable/ic_phone_android"/>

        <View
            android:layout_width="0.5dp"
            android:layout_height="@dimen/dp_50"
            android:background="@color/gray"/>

        <EditText
            android:id="@+id/edt_register_code"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_50"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/verification_code"
            android:paddingLeft="@dimen/dp_20"/>

        <View
            android:layout_width="0.5dp"
            android:layout_height="@dimen/dp_50"
            android:background="@color/gray"/>

        <com.example.administrator.inspectsystem.utils.TimeButton
            android:id="@+id/time_btn"
            android:layout_width="@dimen/dp_90"
            android:layout_height="@dimen/dp_50"
            android:background="@null"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_account"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:background="@drawable/square_box"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_40"
            android:layout_gravity="center"
            android:src="@drawable/ic_lock_outline"/>

        <View
            android:layout_width="0.5dp"
            android:layout_height="@dimen/dp_50"
            android:background="@color/gray"/>

        <EditText
            android:id="@+id/edt_register_password"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_50"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/dp_20"/>

        <ImageView
            android:id="@+id/img_check"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_30"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_eye"/>
    </LinearLayout>
</LinearLayout>